# python-project-174

./: .flake8  .gitignore  Makefile  README.md  cc-test-reporter  demo.cast  from  line-length  pyci.yml  pyproject.toml  ruff.toml  steup.cgf
.github/workflows/: pyci.yml
gendiff/: __init__.py  diff.py  diff_builder.py  parser.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_diff.py  test_diff_builder.py  test_json_formatter.py  test_plain_formatter.py  test_stylish_formatter.py
tests/fixtures/: expected_flat.txt  file2.yml
