[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Kevin Gonzalez <rkevingonzalez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
flake8 = "^6.0"
pylint = "^2.17"
pydocstyle = "^6.3"
bandit = "^1.7"
ruff = "^0.4.2"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
