[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Generate differences between configuration files"
authors = ["Kevin Gonzalez <rkevingonzalez@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
ruff = "0.0.292"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
